Fix text alignment of levistories - Make hero CTA buttons bigger for mobile view - Make mobile view header logo bigger.

--- a/src/styles/landing/landing.scss
+++ b/src/styles/landing/landing.scss
@@ -679,7 +679,7 @@
 
   .winterlink-hero {
     font-size: 1.3rem;
-    padding: 0.3em 0.3em;
+    padding: 0.5em 0.3em;
     margin-left: 0;
   }
 
@@ -689,7 +689,7 @@
 
   .headwearlink-hero {
     font-size: 1.3rem;
-    padding: 0.4em 1em;
+    padding: 0.6em 1em;
   }
 
   .headwearprods-hero {
@@ -849,11 +849,11 @@
     align-items: flex-end;
     position: absolute;
     top: 335px;
-    padding: 0.8em;
+    padding: 1.5em;
   }
 
   .story2 {
-    height: 41em;
+    height: 42em;
     margin-bottom: 0;
   }
 }
@@ -886,7 +886,7 @@
 
   .headwearlink-hero {
     font-size: 1.1rem;
-    padding: 0.4em 0.7em;
+    padding: 0.6em 0.7em;
   }
 
   .featured-container {
