--- a/src/styles/mobilenav/mobilenav.scss
+++ b/src/styles/mobilenav/mobilenav.scss
@@ -276,7 +276,7 @@
 
     div {
       img {
-        width: 70px;
+        width: 80px;
       }
     }
   }
